testsuite/tests/letrec-disallowed/unboxed.ocaml.reference
type t = { x : int64; } [@@unboxed]
Line 1, characters 12-19:
  let rec x = {x = y} and y = 3L;;
              ^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
type r = A of r [@@unboxed]
Line 1, characters 12-15:
  let rec y = A y;;
              ^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
Line 6, characters 2-75:
  ..{a=
      (if Sys.opaque_identity true then
         X a
       else
         Y)}..
Error: This kind of expression is not allowed as right-hand side of `let rec'
type d = D of e [@@unboxed]
and e = V of d | W
Line 3, characters 2-72:
  ..D
      (if Sys.opaque_identity true then
         V d
       else
         W)..
Error: This kind of expression is not allowed as right-hand side of `let rec'

